2010-05-31  David Wetzel <dave@turbocat.de>
       * Source/NSViewController.m
       * Headers/AppKit/NSViewController.h
       New files fixes #29822

2010-05-31  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindowController.m (-setDocumentEdited:, -setWindow:):
	Avoid loading the controller's nib prematurely if the document
	edited status is changed.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSFont.m (-initWithCoder:): Fixed keyed decoding to fall
	back to a standard font only if the named font was not found.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (NSTextViewUndoObject, -performUndo:,
	-shouldChangeTextInRange:replacementString:): Select text
	restored by an undo operation and set insertion point to the end
	of the changed text after a redo operation.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-initWithFrame:, -initWithFrame:textContainer:):
	Ensure a more consistent initial setup of a new text view and its
	text container.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-initWithCoder:, -initWithTextView:,
	-encodeWithCoder:): Fix decoding and encoding of a few text view
	flags, which did not match Cocoa.
	* Source/NSTextView.m (-initWithCoder:): Replace a completely
	bogus workaround to set up the text network of a text view loaded
	from a .nib file with a clean solution.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextContainer.m (-init:, -initWithCoder:): Use
	more reasonable initial container size.
	* Source/NSTextContainer.m (-initWithCoder:): Better decoding of
	text container flags.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSLayoutManager.m (-encodeWithCoder:, -initWithCoder:):
	Make layout manager attributes and flags persistent when using a
	keyed archiver, i.e., saving or loading a .nib file.

2010-05-29 12:00-EDT Gregory John Casamento <greg.casamento@gmail.com>
